fix layout bug

--- a/client/src/components/Carousel/Carousel.css
+++ b/client/src/components/Carousel/Carousel.css
@@ -68,7 +68,7 @@ p,span{
     font-size: small;
     border: 1px solid white;
     border-radius: 15px;
-    height: 1cm;
+    height: 1.5cm;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-top: 0.15cm;
